Adjust command line call creation